--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "name": "mushop",
   "version": "0.1.0",
-  "private": true
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
+  },
+  "dependencies": {
+    "vue": "^2.6.10"
+  },
+  "devDependencies": {
+    "@vue/cli-service": "^3.8.0",
+    "vue-template-compiler": "^2.6.10"
+  }
 }
