--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:server:main": "WEBPACK_TARGET=node NODE_MAIN=1 vue-cli-service build",
     "lint": "vue-cli-service lint",
     "serve": "vue-cli-service serve",
+    "test": "ava",
     "start": "cd dist && node ."
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
     "@vue/eslint-config-standard": "^4.0.0",
+    "ava": "^1.4.1",
     "babel-eslint": "^10.0.1",
     "end-webpack-plugin": "^4.0.0",
     "eslint": "^5.16.0",
@@ -38,7 +40,15 @@
   "lint-staged": {
     "*.{js,vue}": [
       "vue-cli-service lint",
+      "ava",
       "git add"
     ]
+  },
+  "ava": {
+    "require": [
+      "esm"
+    ],
+    "babel": false,
+    "compileEnhancements": false
   }
 }
