--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:client": "WEBPACK_TARGET=web vue-cli-service build",
     "build:server": "WEBPACK_TARGET=node vue-cli-service build",
     "build:server:main": "WEBPACK_TARGET=node NODE_MAIN=1 vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "lint": "vue-cli-service lint --no-fix",
     "serve": "vue-cli-service serve",
     "test": "ava",
     "start": "cd dist && node ."
