--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   },
   "private": true,
   "scripts": {
-    "build": "npm run build:server:main -- --silent && npm run build:server -- --no-clean --silent && npm run build:client -- --no-clean --silent",
-    "build:client": "WEBPACK_TARGET=web vue-cli-service build",
-    "build:server": "WEBPACK_TARGET=node vue-cli-service build",
-    "build:server:main": "WEBPACK_TARGET=node NODE_MAIN=1 vue-cli-service build",
+    "build": "vue-cli-service build",
     "build:test": "node src/server/__tests__/helpers/build-test",
     "lint": "vue-cli-service lint --no-fix",
     "serve": "vue-cli-service serve",
@@ -32,6 +29,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^8.1.5",
+    "vue-cli-plugin-multi-compiler": "^0.1.0",
     "vue-template-compiler": "^2.6.10",
     "webpack-node-externals": "^1.7.2"
   },
