--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "esm": "^3.2.25",
     "mime-types": "^2.1.24",
+    "nodemailer": "^6.2.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vue-server-renderer": "^2.6.10"
