--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "lint-staged": {
     "*.{js,vue}": [
       "vue-cli-service lint",
-      "git add"
+      "git add",
+      "node scripts/test:unit"
     ]
   },
   "ava": {
@@ -48,6 +49,8 @@
     ],
     "babel": false,
     "compileEnhancements": false,
+    "failFast": false,
+    "failWithoutAssertions": false,
     "helpers": [
       "**/__tests__/helpers/**/*"
     ],
@@ -56,7 +59,7 @@
       "!**/__tests__/fixtures/**/*"
     ],
     "sources": [
-      "**/src/**/*"
+      "src/**/*"
     ]
   }
 }
