--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "cd dist && node ."
   },
   "dependencies": {
+    "esm": "^3.2.25",
     "mime-types": "^2.1.24",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
@@ -25,6 +26,7 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "ava": "^2.0.0",
     "babel-eslint": "^10.0.1",
+    "copy-webpack-plugin": "^5.0.3",
     "end-webpack-plugin": "^4.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
